--- a/starter-webapp/src/main/webapp/WEB-INF/views/registerForm.html
+++ b/starter-webapp/src/main/webapp/WEB-INF/views/registerForm.html
@@ -11,7 +11,7 @@
     <div id="content">
       <h1>Register</h1>
   
-      <form method="POST" th:object="${profile}">
+      <form method="POST" th:object="${newProfile}">
         <div class="errors" th:if="${#fields.hasErrors('*')}">
           <ul>
             <li th:each="err : ${#fields.errors('*')}" 
